--- a/MiPrimerApp/MiPrimerApp/MiPrimerApp.csproj
+++ b/MiPrimerApp/MiPrimerApp/MiPrimerApp.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VerDetalleArticulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VerDetalleArticulo.Designer.cs">
+      <DependentUpon>VerDetalleArticulo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
